--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -2,7 +2,7 @@ name: AutoBuild
 
 on:
   push:
-    branches: master
+    branches: [master]
 
 permissions:
   contents: write
@@ -11,16 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout for CI 🛎️'
+      - name: "Checkout for CI 🛎️"
         uses: actions/checkout@v4
-        
-      - name: 'Set up JDK 21 📦'
+
+      - name: "Set up JDK 21 📦"
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          java-version: "21"
+          distribution: "temurin"
 
-      - name: 'Build with Gradle 🏗️'
+      - name: "Build with Gradle 🏗️"
         uses: gradle/gradle-build-action@v3
         with:
           arguments: build
